ext_authz/istio_envoyfilter_ext_authz_http_15.yaml
#######################################################################
#   Insert ext-authz-server to ingress gateway
#######################################################################

apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ext-authz-filter
  namespace: istio-system
spec:
  workloadLabels:
    app: istio-ingressgateway
  filters:
    - listenerMatch:
        listenerType: GATEWAY
        listenerProtocol: HTTP
      insertPosition:
        index: FIRST
      filterName: envoy.ext_authz
      filterType: HTTP
      filterConfig:
#       grpc_service:
#          envoy_grpc:
#            cluster_name: patched.ext-authz-server.foo.svc.cluster.local
#         timeout: 3s
        http_service:
          server_uri:
            uri: ext-authz-http.foo.svc.cluster.local:8000
            cluster: patched.ext-authz-server.foo.svc.cluster.local
            timeout: 1s
          # IMPORTANT: The following is only added when authorization failed!!!
          # https://github.com/envoyproxy/envoy/blob/1a9f1859fc530ca40cbd66675c4971bb6ed3d575/api/envoy/extensions/filters/http/ext_authz/v3/ext_authz.proto#L146
          authorization_response:
            allowed_client_headers:
              patterns:
                - exact: "set-cookie"
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: ext-authz-filter-cluster-patch
  namespace: istio-system
spec:
  workloadLabels:
    app: istio-ingressgateway
  configPatches:
    - applyTo: CLUSTER
      match:
        cluster:
          service: ext-authz-server.foo.svc.cluster.local
      patch:
        operation: MERGE
        value:
          name: "patched.ext-authz-server.foo.svc.cluster.local"
---

#######################################################################
#   Enable mTLS and authZ on ext-authz-server
#######################################################################

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ext-authz-server
  namespace: foo
spec:
  host: ext-authz-server.foo.svc.cluster.local
  trafficPolicy:
    tls:
      #      mode: DISABLE
      mode: ISTIO_MUTUAL
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: ext-authz-server
  namespace: foo
spec:
  selector:
    matchLabels:
      app: ext-authz-server
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ext-authz-server
  namespace: foo
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: ext-authz-server
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
---
